# -Super-AI-Engineer-S6-FahMai-RAG-Challenge-level-1-

./: .env.example  .gitignore  README.md  fahmai_rag_jina.ipynb  fahmai_rag_jina.py  pyproject.toml  starter_kit_FahMai_RAG.ipynb  submission.csv
archive/submissions/: fixed_512_128.csv  scratch_baseline_8_9_10.csv  scratch_queryplan_8_9_10.csv  scratch_verifier_8_9_10.csv  submissiongod.csv
artifacts/analysis/: auto_selected.csv  balanced_pain16.csv  balanced_pain16_debug.jsonl  baseline_pain16_debug.jsonl  candidate_key.csv  faceted_smoke_14_22_49_82_debug.jsonl  fahmai_rag_jina_pre_sync.ipynb  final6.csv  final6_debug.jsonl  full_check_debug.jsonl  full_check_submission.csv  full_llmfirst_candidate.csv  full_llmfirst_debug.jsonl  god.csv  god.jsonl  group1_false9_fix.csv  group1_false9_fix_debug.jsonl  group1_smoke.csv  group1_smoke_debug.jsonl  kbtg_hard_subset.csv  kbtg_hard_subset.jsonl  llm_first_review_14_15_22.jsonl  low_noise_pain16.csv  low_noise_pain16_debug.jsonl  maybe_correct.csv  openthaigpt_compression_smoke.jsonl  openthaigpt_prompt_boxfix_subset.jsonl  openthaigpt_prompt_upgrade_subset.jsonl  (+64 more)
debug_logs/: fixed_512_128.jsonl  hybrid_rerank.jsonl  openthaigpt_full_submission.jsonl  pathumma_full_submission.jsonl  pathumma_solver_full_submission.jsonl  pathumma_source_aware.jsonl  pathumma_source_aware_2.jsonl  pathumma_source_aware_patumma.jsonl  query_plan_run.jsonl  source_aware_run.jsonl  typhoon_source_aware_.jsonl
scripts/: build_imitation_dataset.py  build_validated_train_csv.py  check_questions.py  detect_best_answer.py  final_answer_picker.py
(+6 files in other folders)
