[project]
name = "fahmai-rag-jina"
version = "0.1.0"
description = "FahMai RAG baseline using Jina embeddings and ThaiLLM"
requires-python = ">=3.12,<3.14"
dependencies = [
    "numpy>=2.3.0",
    "peft>=0.15.2",
    "python-dotenv>=1.1.0",
    "pythainlp>=5.1.2",
    "rank-bm25>=0.2.2",
    "requests>=2.32.0",
    "sentence-transformers>=5.1.0",
    "torch>=2.8.0",
    "transformers>=4.57.0",
]

[tool.uv]
package = false
